# cobolX

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.yml  dockerfile  dockerfile.test  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
scripts/: install.js  prepare-version.js
src/: agent.rs  cobol.rs  config.rs  lib.rs  main.rs  memory.rs  path_safety.rs  ui.rs
src/agent/: client.rs  clients.rs  db_agent.rs  explain_agent.rs  fs_agent.rs  skills.rs  types.rs
src/cobol/: copybook.rs  data_parser.rs  indexer.rs  layout.rs  lexer.rs  model.rs  scanner.rs  source_parser.rs
src/config/: config.rs
src/memory/: files.rs  memories.rs  runs.rs  store.rs
src/ui/: draw.rs  tui.rs
tests/: indexer_tests.rs  project_files_tests.rs  sandbox_tests.rs
