[package]
name = "rdo"
version = "1.0.3"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.26"
crossterm = "0.27"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
directories = "5.0"
futures-util = "0.3"
rusqlite = { version = "0.40.1", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.8"

[lints.rust]
unused_variables = "warn"
dead_code = "allow"

[lints.clippy]
collapsible_if = "allow"
new_without_default = "allow"
implicit_saturating_sub = "allow"
manual_div_ceil = "allow"
if_same_then_else = "allow"
module_inception = "allow"
unnecessary_map_or = "allow"
needless_range_loop = "allow"




